methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:11: error: Boolean does not take parameters
    if (seenBaggle()) {
                  ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^